--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconify/react": "^4.1.0",
@@ -21,7 +22,9 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.3.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.2",
+    "minify": "^10.3.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
