--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -24,6 +25,7 @@
     "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
     "formik": "^2.4.2",
+    "framer-motion": "^10.15.0",
     "minify": "^10.3.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
